// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectAttributeFilterHandler should load elements for init selection 1`] = `
Array [
  Object {
    "title": "CompuSci",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
  },
  Object {
    "title": "Educationly",
    "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate all options to loadElementsRange: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeWithMultipleFilters",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate all options to loadElementsRange: onElementsRangeLoadSuccess parameters 1`] = `
Array [
  Object {
    "attributeElements": Array [],
    "correlation": "elementsRangeWithMultipleFilters",
    "limit": 100,
    "offset": 0,
    "totalCount": 0,
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate search option to loadElementsRange: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeWithSearch",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate search option to loadElementsRange: onElementsRangeLoadSuccess parameters 1`] = `
Array [
  Object {
    "attributeElements": Array [
      Object {
        "title": "WonderKid",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166497",
      },
    ],
    "correlation": "elementsRangeWithSearch",
    "limit": 100,
    "offset": 0,
    "totalCount": 1,
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate setLimitingAttributeFilters option to loadElementsRange: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeWithAttributeFilters",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate setLimitingAttributeFilters option to loadElementsRange: onElementsRangeLoadSuccess parameters 1`] = `
Array [
  Object {
    "attributeElements": Array [
      Object {
        "title": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
      Object {
        "title": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
      Object {
        "title": "TouchAll",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
      },
    ],
    "correlation": "elementsRangeWithAttributeFilters",
    "limit": 100,
    "offset": 0,
    "totalCount": 3,
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate setLimitingDateFilters option to loadElementsRange: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeWithDateFilters",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate setLimitingDateFilters option to loadElementsRange: onElementsRangeLoadSuccess parameters 1`] = `
Array [
  Object {
    "attributeElements": Array [
      Object {
        "title": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
    ],
    "correlation": "elementsRangeWithDateFilters",
    "limit": 100,
    "offset": 0,
    "totalCount": 1,
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate setLimitingMeasures option to loadElementsRange: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeWithMeasureFilters",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should propagate setLimitingMeasures option to loadElementsRange: onElementsRangeLoadSuccess parameters 1`] = `
Array [
  Object {
    "attributeElements": Array [
      Object {
        "title": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
      Object {
        "title": "TouchAll",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
      },
    ],
    "correlation": "elementsRangeWithMeasureFilters",
    "limit": 100,
    "offset": 0,
    "totalCount": 2,
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange cancel callback on another loadElementsRange call: onElementsRangeLoadCancel parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeToBeCanceled",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange cancel callback on another loadElementsRange call: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeToBeCanceled",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange cancel callback on another loadElementsRange call: onElementsRangeLoadSuccess parameters 1`] = `
Array [
  Object {
    "attributeElements": Array [
      Object {
        "title": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
      Object {
        "title": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
      Object {
        "title": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
      Object {
        "title": "PhoenixSoft",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=166339",
      },
      Object {
        "title": "TouchAll",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=460491",
      },
    ],
    "correlation": "elementsRangeSuccess",
    "limit": 5,
    "offset": 1,
    "totalCount": 7,
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange cancel callback on cancel: onElementsRangeLoadCancel parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeToBeCanceled",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange cancel callback on cancel: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeToBeCanceled",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange error callback: onElementsRangeLoadError parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeError",
    "error": [Error: No element recordings for df non-existing-displayForm],
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange error callback: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeError",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange success callback: onElementsRangeLoadStart parameters 1`] = `
Array [
  Object {
    "correlation": "elementsRangeSuccess",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger loadElementsRange success callback: onElementsRangeLoadSuccess parameters 1`] = `
Array [
  Object {
    "attributeElements": Array [
      Object {
        "title": "CompuSci",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
      },
      Object {
        "title": "Educationly",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165847",
      },
      Object {
        "title": "Explorer",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=342345",
      },
      Object {
        "title": "Grammar Plus",
        "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=168737",
      },
    ],
    "correlation": "elementsRangeSuccess",
    "limit": 4,
    "offset": 0,
    "totalCount": 7,
  },
]
`;
